--- a/index.html
+++ b/index.html
@@ -11,13 +11,40 @@
 
 <body>
     <div id="app">
-        {{ mensagem }}
+    {{ somar() }} <br>
+    {{ subtrair() }} <br>
+    {{ multiplicar() }} <br>
+    {{ multiplicarError() }} <br>
+    {{ dividir() }} <br>
+    {{ numeroAleatorio() }} <br>
     </div>
     <script>
         const vm = new Vue({
             el: '#app',
-            data: {
-                mensagem: 'Primeiro template Vue'
+            data: { 
+                n1:10,
+                n2: 5
+            },
+            methods:{
+                somar: function somar() {// convencional
+                    return this.n1 + this.n2;
+                },
+                subtrair: function() {// anomina
+                    return this.n1 - this.n2;
+                },
+                multiplicarError: () => {// arrow function
+                    return this.n1 * this.n2; // NAO FUNCIONAR ERROR LEXICO
+                },
+                multiplicar: () => {// arrow function
+                    return 10 * 3; // NAO FUNCIONAR ERROR LEXICO
+                },
+                dividir() {// enxuta => usa a forma convencional
+                    return this.n1 / this.n2;
+                },
+                numeroAleatorio() {// enxuta => usa a forma convencional
+                    return Math.random();
+                }
+
             }
         });// vm = ViewMOdel
 
