--- a/index.html
+++ b/index.html
@@ -5,47 +5,35 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Curso Vue Js - SICAP LCO</title>
+    <style>
+        .vermelho {
+            color: red
+        }
+
+     </style>
     <script src="./vue.js"></script>
+     
     <!-- <script src="https://cdn.jsdelivr.net/npm/vue@2.6.14"></script> -->
 </head>
 
 <body>
     <div id="app">
-    {{ somar() }} <br>
-    {{ subtrair() }} <br>
-    {{ multiplicar() }} <br>
-    {{ multiplicarError() }} <br>
-    {{ dividir() }} <br>
-    {{ numeroAleatorio() }} <br>
+        <a v-bind:href="site" target="_blank">google</a>
+        <p v-bind:class="cor"> Entendendo a diretitva v Bind</p>
+             <input type="text" v-bind:placeholder="instrucao" v-bind:value="valor" />
+             <input type="checkbox" v-bind:checked="check"/>
     </div>
     <script>
         const vm = new Vue({
             el: '#app',
-            data: { 
-                n1:10,
-                n2: 5
-            },
-            methods:{
-                somar: function somar() {// convencional
-                    return this.n1 + this.n2;
-                },
-                subtrair: function() {// anomina
-                    return this.n1 - this.n2;
-                },
-                multiplicarError: () => {// arrow function
-                    return this.n1 * this.n2; // NAO FUNCIONAR ERROR LEXICO
-                },
-                multiplicar: () => {// arrow function
-                    return 10 * 3; // NAO FUNCIONAR ERROR LEXICO
-                },
-                dividir() {// enxuta => usa a forma convencional
-                    return this.n1 / this.n2;
-                },
-                numeroAleatorio() {// enxuta => usa a forma convencional
-                    return Math.random();
-                }
-
-            }
+            data: {
+                    site: 'https://www.google.com/',
+                    cor: 'vermelho',
+                    instrucao:' placehoder objeto v-bind',
+                    valor: 'valor default v-bind',
+                    check: true
+             },
+            methods:{  }
         });// vm = ViewMOdel
 
     </script>
