dia 20-08 de manha

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     </style>
     <script src="./vue.js"></script>
 
-    <!-- PROXIMA = 274. Diretiva V-For - Implementando laços de repetição parte 2
+    <!-- PROXIMA = 275. 
     <script src="https://cdn.jsdelivr.net/npm/vue@2.6.14"></script> -->
 </head>
 <body>
@@ -22,6 +22,28 @@
         <ul>
             <li v-for="(variavel, chave) in cursos" v-text="chave +'-'+ variavel">  </li>
         </ul>
+        <table border="1">
+            <thead>
+                <tr>
+                    <th>id</th>
+                    <th>curso</th>
+                    <th>Descrição</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr v-for="(obj, key)  in cursos2">
+                    <td > {{ key }}</td>
+                    <td > {{ obj.titulo }}</td>
+                    <td > {{ obj.descricao }}</td>
+                </tr>
+                <!-- ou dessa forma : destructuring assigner-->
+                 <tr v-for="({titulo, descricao}, key)  in cursos2">
+                    <td > {{ key }}</td>
+                    <td > {{ titulo }}</td>
+                    <td > {{ descricao }}</td>
+                </tr>
+            </tbody>
+        </table>
     </div>
 
     <script>
@@ -29,7 +51,11 @@
         const vm = new Vue({
             el: '#app',
             data: {
-                cursos: ['Laravel' , 'Web Completo', 'Banco de dados']
+                cursos: ['Laravel' , 'Web Completo', 'Banco de dados'],
+                cursos2: { 
+                    1000: {titulo: 'Laravel', descricao:' Laravel o frame work php mais famoso'},
+                    1001:{titulo: 'Banco de dados', descricao:' use o SGBD para gerenciar'},
+                    1002: {titulo: 'Java', descricao:' Java a mais poderosa'}}
 
             },
             methods: {
