--- a/index.html
+++ b/index.html
@@ -10,31 +10,32 @@
     </style>
     <script src="./vue.js"></script>
 
-    <!-- PROXIMA = 283. 
+    <!-- PROXIMA = 284. 
     <script src="https://cdn.jsdelivr.net/npm/vue@2.6.14"></script> -->
 </head>
+
 <body>
     <div id="app">
-              Aula 283
-    </div>
+        Aula 284 <br>
 
+    </div>
     <script>
         const vm = new Vue({
             el: '#app',
-            data: { 
-               
-            },
-            methods: {
-                  
-            },
-            computed:{
+            data: {
 
             },
-             watch:{
+            methods: {
+
+            },
+            computed: {
+
+            },
+            watch: {
 
             }
         })
-
     </script>
 </body>
+
 </html>
